--- a/src/components/Articles.css
+++ b/src/components/Articles.css
@@ -1,19 +1,39 @@
+/* ArticlesList.css */
 .articles {
-  padding: 20px;
+  background-color: #f8f8f8;
+  padding: 50px 20px;
+  border-radius: 10px;
   max-width: 800px;
-  margin: auto;
-  background-color: #fff;
+  margin: 40px auto;
+}
+
+.articles h2 {
+  font-size: 2rem;
+  color: #4CAF50;
+  margin-bottom: 20px;
+}
+
+.article-card {
+  background-color: white;
+  padding: 20px;
+  margin: 10px 0;
   border-radius: 8px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.articles h2 {
-  color: #4CAF50;
-  text-align: center;
+.article-card h3 {
+  font-size: 1.4rem;
+  color: #333;
+  margin-bottom: 10px;
 }
 
-.articles p {
-  line-height: 1.6;
-  font-size: 16px;
-  color: #333;
+.article-card p {
+  font-size: 1rem;
+  color: #666;
+}
+
+.article-card a {
+  color: #4CAF50;
+  text-decoration: underline;
+  font-weight: bold;
 }
