--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,20 +1,54 @@
+/* Contact.css */
 .contact {
-    background-color: #333;
-    color: white;
-    padding: 50px 20px;
-    border-radius: 8px;
-  }
-  
-  .contact p {
-    font-size: 16px;
-  }
-  
-  .contact a {
-    color: #4CAF50;
-    font-weight: bold;
-  }
-  
-  .contact a:hover {
-    color: #fff;
-  }
-  
+  padding: 50px 20px;
+  max-width: 800px;
+  margin: auto;
+  background-color: #f7f7f7;
+  border-radius: 8px;
+  text-align: center;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.contact h2 {
+  color: #333333;
+}
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+}
+
+.form-group label {
+  font-weight: 500;
+  margin-bottom: 5px;
+}
+
+.form-group input,
+.form-group textarea {
+  padding: 10px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  font-size: 1rem;
+}
+
+.submit-button {
+  padding: 10px 20px;
+  background-color: #474a83;
+  color: white;
+  font-weight: bold;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.submit-button:hover {
+  background-color: #497ca2;
+}
