--- a/src/components/Experience.css
+++ b/src/components/Experience.css
@@ -1,26 +1,40 @@
+/* Experience.css */
+/* Experience.css */
 .experience {
-    background-color: #f0f0f0;
-    padding: 50px 20px;
-    border-radius: 8px;
-  }
-  
-  .experience .job {
-    margin-bottom: 20px;
-  }
-  
-  .experience h3 {
-    margin: 0;
-    font-size: 20px;
-    color: #4CAF50;
-  }
-  
-  .experience h4 {
-    margin: 5px 0;
-    color: #555;
-  }
-  
-  .experience p {
-    font-size: 16px;
-    line-height: 1.6;
-  }
-  
+  padding: 50px 20px;
+  max-width: 800px;
+  margin: auto;
+  background-color: #fff;
+  border-radius: 8px;
+  text-align: center;
+  box-shadow: 0px 4px 8px rgb(252, 252, 252);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.experience:hover {
+  transform: translateY(-5px) scale(1.02);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+}
+
+.experience h2 {
+  color: #333333;
+}
+
+
+.experience .job-title {
+  font-weight: bold;
+  font-size: 1.2rem;
+  color: #333;
+}
+
+.experience .company {
+  font-style: italic;
+  color: #555;
+  margin-bottom: 10px;
+}
+
+.experience p {
+  font-size: 1.1rem;
+  line-height: 1.6;
+  color: #666;
+}
