--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,38 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
+
+h1 {
+  font-weight: 700; /* Bold */
+}
+
+h2, h3 {
+  font-weight: 500; /* Medium */
+}
+
+p, a {
+  font-weight: 400; /* Regular */
+}
+
 body {
+  font-family: 'Montserrat', sans-serif;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  background-color: #f7f7f7;
+  color: hsl(0, 0%, 20%);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* App.css or index.css */
+html {
+  scroll-behavior: smooth;
+}
+
+/* App.css or index.css */
+a:hover {
+  color: #45a049; /* Adjust color as needed */
+  transition: color 0.3s;
+}
+
