--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,11 +1,11 @@
 /* About.css */
 .about {
   padding: 50px 20px;
-  max-width: 800px;
   margin: auto;
   text-align: center;
   background-color: rgba(255, 255, 255, 0.8);
   border-radius: 8px;
+  max-width: 1500px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   animation: fadeIn 1s ease-in-out; /* Add fade-in animation */
@@ -25,4 +25,8 @@
     opacity: 1;
     transform: translateY(0);
   }
+}
+
+.about h2 {
+  color: rgb(16, 16, 17);
 }
