--- a/src/components/Articles.css
+++ b/src/components/Articles.css
@@ -1,9 +1,8 @@
-/* ArticlesList.css */
 .articles {
   background-color: #f8f8f8;
   padding: 50px 20px;
   border-radius: 10px;
-  max-width: 800px;
+  max-width: 1200px;
   margin: 40px auto;
 }
 
@@ -11,14 +10,26 @@
   font-size: 2rem;
   color: #4CAF50;
   margin-bottom: 20px;
+  text-align: center;
+}
+
+.articles-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px;
 }
 
 .article-card {
   background-color: white;
   padding: 20px;
-  margin: 10px 0;
   border-radius: 8px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.article-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
 }
 
 .article-card h3 {
@@ -30,10 +41,10 @@
 .article-card p {
   font-size: 1rem;
   color: #666;
+  margin-bottom: 15px;
 }
 
-.article-card a {
-  color: #4CAF50;
-  text-decoration: underline;
-  font-weight: bold;
+.articles h2 {
+  color: rgb(3, 3, 3);
 }
+
