--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -1,40 +1,61 @@
-/* Projects.css */
+/* Import Montserrat font from Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+
 .projects {
-  padding: 50px 20px;
-  max-width: 800px; /* Match the width with other sections */
-  margin: auto;
+  padding: 40px 20px;
   background-color: #f7f7f7;
-  border-radius: 8px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-  text-align: center;
 }
 
 .projects h2 {
-  color: #333333;
+  text-align: center;
+  font-size: 1.7rem;
+  margin-bottom: 40px;
+  font-family: 'Montserrat', sans-serif; /* Apply Montserrat font */
+  color: black; /* Set title color to black */
 }
 
-.projects ul {
-  list-style-type: none;
+.projects-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+  gap: 20px;
   padding: 0;
+  list-style: none;
 }
 
-.projects li {
-  margin-bottom: 20px;
-  padding: 20px;
+.project-card {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
   border-radius: 8px;
-  background-color: #fff;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  text-decoration: none;
+  color: inherit;
+  transition: transform 0.3s ease-in-out;
 }
 
-.projects li:hover {
-  transform: translateY(-5px) scale(1.02);
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+.project-card:hover {
+  transform: translateY(-5px);
 }
 
-.projects h3 {
-  color: #333;
+.project-image img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
 }
 
-.projects p {
-  color: #666;
+.project-info {
+  padding: 15px;
+  text-align: center;
+}
+
+.project-info h3 {
+  font-size: 1.25rem;
+  margin: 10px 0;
+}
+
+.project-info p {
+  font-size: 0.9rem;
+  color: #555;
+  margin-bottom: 15px;
 }
