--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,8 @@ body {
   font-family: 'Montserrat', sans-serif;
   margin: 0;
   padding: 0;
+  width: 100%;
+  height: 100%;
   background-color: #f7f7f7;
   color: hsl(0, 0%, 20%);
 }
@@ -32,7 +34,7 @@ html {
 
 /* App.css or index.css */
 a:hover {
-  color: #45a049; /* Adjust color as needed */
+  color: #0d0d0e; /* Adjust color as needed */
   transition: color 0.3s;
 }
 
@@ -49,3 +51,4 @@ a:hover {
 .section {
   animation: fadeIn 1s ease-in-out;
 }
+
