--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -59,3 +59,8 @@
   color: #555;
   margin-bottom: 15px;
 }
+
+.badge-container img {
+  max-width: 120px; /* Adjust the width as needed */
+  margin-top: 10px;
+}
