--- a/src/components/Publications.css
+++ b/src/components/Publications.css
@@ -68,6 +68,7 @@
   margin-top: 20px;
   padding: 10px 20px;
   background-color: #4c6baf;
+  text-align: center;
   color: white;
   font-size: 1rem;
   font-weight: bold;
@@ -90,3 +91,5 @@
     color: #333333;
     margin-bottom: 20px;
   }
+
+  
